--- a/index.html
+++ b/index.html
@@ -1,27 +1,306 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simon Game</title>
-    <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="styles.css" />
+    <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet" />
 </head>
+
 <body>
-    <h1 id="level-title">Press A Key to start</h1>
-    <div class = "container">
-      <div class = "row">
-        <div type = "button" id = "green" class = "btn green"></div>
-        <div type = "button" id = "red" class = "btn red"></div>
-      </div>
-      <div class = "row">
-        <div type = "button" id = "blue" class = "btn blue"></div>
-        <div type = "button" id = "yellow" class = "btn yellow"></div>
-      </div>
-
-    </div>
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
-    <script src="game.js"></script>
-
+    <header>
+        <div class="logo"><a href="#">ShopWhoop</a></div>
+        <div class="menu">
+            <a><ion-icon name="close" class="close"></ion-icon></a>
+            <ul>
+                <li><a href="#" class="under">Home</a></li>
+                <li><a href="#" class="under">Shop</a></li>
+                <li><a href="#" class="under">Our Prodcuts</a></li>
+                <li><a href="#" class="under">Contact us</a></li>
+                <li><a href="#" class="under">About us</a></li>
+            </ul>
+        </div>
+        <div class="search">
+            <a><input type="text" placeholder="search products" id="input" />
+                <ion-icon class="s" name="search"></ion-icon>
+            </a>
+        </div>
+        <div class="heading">
+            <ul>
+                <li><a href="#" class="under">Home</a></li>
+                <li><a href="#" class="under">Shop</a></li>
+                <li><a href="#" class="under">Out Products</a></li>
+                <li><a href="#" class="under">Contact us</a></li>
+                <li><a href="#" class="under">About us</a></li>
+            </ul>
+        </div>
+       
+    </header>
+    <section>
+        <div class="section">
+            <div class="section1">
+                <div class="img-slider">
+                    <img src="https://images.pexels.com/photos/6347888/pexels-photo-6347888.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+                        alt="" class="img" />
+                    <img src="https://images.pexels.com/photos/3962294/pexels-photo-3962294.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+                        alt="" class="img" />
+                    <img src="https://images.pexels.com/photos/2292953/pexels-photo-2292953.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500"
+                        alt="" class="img" />
+                    <img src="https://images.pexels.com/photos/1229861/pexels-photo-1229861.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+                        alt="" class="img" />
+                    <img src="https://images.pexels.com/photos/1598505/pexels-photo-1598505.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+                        alt="" class="img" />
+                </div>
+            </div>
+            <div class="section2">
+                <div class="container">
+                    <div class="items">
+                        <div class="img img1">
+                            <img src="https://images.pexels.com/photos/1464625/pexels-photo-1464625.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
+                                alt="" />
+                        </div>
+                        <div class="name">Shoes</div>
+                        <div class="price">$5</div>
+                        <div class="info">
+                            Get comfortable and reliable shoes.
+                        </div>
+                    </div>
+                    <div class="items">
+                        <div class="img img2">
+                            <img src="https://images.pexels.com/photos/3649765/pexels-photo-3649765.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+                                alt="" />
+                        </div>
+                        <div class="name">MEN's T-SHIRT</div>
+                        <div class="price">$7</div>
+                        <div class="info">Get most comfy and brand new collection of t-shirt's.</div>
+                    </div>
+                    <div class="items">
+                        <div class="img img3">
+                            <img src="https://media.istockphoto.com/photos/folded-blue-jeans-on-a-white-background-modern-casual-clothing-flat-picture-id1281304280"
+                                alt="" />
+                        </div>
+                        <div class="name">JEANS</div>
+                        <div class="price">$9</div>
+                        <div class="info">Denim and Pepe London and others.</div>
+                    </div>
+                    <div class="items">
+                        <div class="img img1">
+                            <img src="https://images.pexels.com/photos/8839887/pexels-photo-8839887.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
+                                alt="" />
+                        </div>
+                        <div class="name">WATCH</div>
+                        <div class="price">$11.7</div>
+                        <div class="info">Get swiss military watches.</div>
+                    </div>
+                    <div class="items">
+                        <div class="img img1">
+                            <img src="https://images.pexels.com/photos/6858618/pexels-photo-6858618.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
+                                alt="" />
+                        </div>
+                        <div class="name">SMARTPHONE</div>
+                        <div class="price">$40</div>
+                        <div class="info">Mobile phones and other brand new gadgets.</div>
+                    </div>
+                    <div class="items">
+                        <div class="img img1">
+                            <img src="https://images.pexels.com/photos/5552789/pexels-photo-5552789.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
+                                alt="" />
+                        </div>
+                        <div class="name">TELEVISION</div>
+                        <div class="price">$28</div>
+                        <div class="info">
+                            Brand new 90-inch LED TV.
+                        </div>
+                    </div>
+                    <div class="items">
+                        <div class="img img1">
+                            <img src="https://images.pexels.com/photos/4295985/pexels-photo-4295985.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+                                alt="" />
+                        </div>
+                        <div class="name">HOODIES</div>
+                        <div class="price">$8</div>
+                        <div class="info">Most branded and comfy hoodies for Men and Women.</div>
+                    </div>
+                    <div class="items">
+                        <div class="img img1">
+                            <img src="https://media.istockphoto.com/photos/vintage-plates-with-silver-teaspoons-picture-id184363070"
+                                alt="" />
+                        </div>
+                        <div class="name">DINNER SET</div>
+                        <div class="price">$12</div>
+                        <div class="info">
+                            Brand new dinner set for family and guests.
+                        </div>
+                    </div>
+                    <div class="items">
+                        <div class="img img1">
+                            <img src="https://images.pexels.com/photos/6463348/pexels-photo-6463348.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+                                alt="" />
+                        </div>
+                        <div class="name">BLANKETS</div>
+                        <div class="price">$13</div>
+                        <div class="info">
+                            Woolen and warm blankets for the upcoming winter.
+                        </div>
+                    </div>
+                    <div class="items">
+                        <div class="img img1">
+                            <img src="https://images.pexels.com/photos/2659939/pexels-photo-2659939.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+                                alt="" />
+                        </div>
+                        <div class="name">LAPTOP</div>
+                        <div class="price">$100</div>
+                        <div class="info">
+                            Get a new ryzen 7 laptop with latest specifications.
+                        </div>
+                    </div>
+                    <div class="items">
+                        <div class="img img1">
+                            <img src="https://media.istockphoto.com/photos/modern-kitchen-microwave-oven-picture-id1144960519"
+                                alt="" />
+                        </div>
+                        <div class="name">MICROWAVE</div>
+                        <div class="price">$20</div>
+                        <div class="info">
+                            Prepare new dishes with this new cooking material. 
+                        </div>
+                    </div>
+                    <div class="items">
+                        <div class="img img1">
+                            <img src="https://media.istockphoto.com/photos/black-coffee-maker-with-green-led-lights-picture-id177395430"
+                                alt="" />
+                        </div>
+                        <div class="name">COFFEE MAKER</div>
+                        <div class="price">$26</div>
+                        <div class="info">
+                            Make coffee in the chilling winter.
+                        </div>
+                    </div>
+                    <div class="items">
+                        <div class="img img1">
+                            <img src="https://images.pexels.com/photos/6606354/pexels-photo-6606354.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+                                alt="" />
+                        </div>
+                        <div class="name">BED</div>
+                        <div class="price">$100</div>
+                        <div class="info">
+                            Get wooden beds with brand new designs.
+                        </div>
+                    </div>
+                    <div class="items">
+                        <div class="img img1">
+                            <img src="https://media.istockphoto.com/photos/woman-turning-on-air-conditioner-picture-id1325708905"
+                                alt="" />
+                        </div>
+                        <div class="name">AIR CONDITIONER</div>
+                        <div class="price">$78</div>
+                        <div class="info">
+                            Buy a AC and end summer struggle.
+                        </div>
+                    </div>
+                    <div class="items">
+                        <div class="img img1">
+                            <img src="https://images.pexels.com/photos/5834/nature-grass-leaf-green.jpg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
+                                alt="" />
+                        </div>
+                        <div class="name">BOOK</div>
+                        <div class="price">$9</div>
+                        <div class="info">
+                           Read newly published books.
+                        </div>
+                    </div>
+                    <div class="items">
+                        <div class="img img1">
+                            <img src="https://images.pexels.com/photos/4339598/pexels-photo-4339598.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
+                                alt="" />
+                        </div>
+                        <div class="name">BAG</div>
+                        <div class="price">$36.5</div>
+                        <div class="info">
+                           From American tourister to Skybags, get every brand at your grip.
+                        </div>
+                    </div>
+                    <div class="items">
+                        <div class="img img1">
+                            <img src="https://media.istockphoto.com/photos/hand-of-a-lady-selecting-yellow-colored-saree-in-a-shop-picture-id1301740530"
+                                alt="" />
+                        </div>
+                        <div class="name">SAREES</div>
+                        <div class="price">$25.6</div>
+                        <div class="info">
+                           New maslin and traditional Indian.
+                        </div>
+                    </div>
+                    <div class="items">
+                        <div class="img img1">
+                            <img src="https://images.pexels.com/photos/5816934/pexels-photo-5816934.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
+                                alt="" />
+                        </div>
+                        <div class="name">WASHING MACHINE</div>
+                        <div class="price">$56</div>
+                        <div class="info">
+                           Wash your clothes with your new washing machine and avoid washing with hands.
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <div class="footer0">
+            <h1>ShopWhoop</h1>
+        </div>
+        <div class="footer1">
+            Connect with us today
+            <div class="social-media">
+                <a href="#"> <ion-icon name="logo-facebook"></ion-icon> </a>
+                <a href="#"> <ion-icon name="logo-linkedin"></ion-icon> </a>
+                <a href="#"> <ion-icon name="logo-youtube"></ion-icon> </a>
+                <a href="#"><ion-icon name="logo-instagram"></ion-icon></a>
+                <a href="#"> <ion-icon name="logo-twitter"></ion-icon> </a>
+            </div>
+        </div>
+        <div class="footer2">
+            <div class="product">
+                <div class="heading">Products</div>
+                <div class="div">Sell your Products</div>
+                <div class="div">Advertise</div>
+                <div class="div">Pricing</div>
+                <div class="div">Product Buisness</div>
+            </div>
+            <div class="services">
+                <div class="heading">Services</div>
+                <div class="div">Return</div>
+                <div class="div">Cash Back</div>
+                <div class="div">Affiliate Marketing</div>
+                <div class="div">Others</div>
+            </div>
+            <div class="Company">
+                <div class="heading">Company</div>
+                <div class="div">Complaint</div>
+                <div class="div">Careers</div>
+                <div class="div">Affiliate Marketing</div>
+                <div class="div">Support</div>
+            </div>
+            <div class="Get Help">
+                <div class="heading">Get Help</div>
+                <div class="div">Help Center</div>
+                <div class="div">Privacy Policy</div>
+                <div class="div">Terms</div>
+                <div class="div">Login</div>
+            </div>
+        </div>
+        <div class="footer3">
+            Copyright ©
+            <h4>ShopWhoop</h4>
+            2023-2028
+        </div>
+    </footer>
+    <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
+    <script src="ecommerce.js"></script>
 </body>
+
 </html>
